--- a/help/en-us/contents/ReMetrics.css
+++ b/help/en-us/contents/ReMetrics.css
@@ -1,3 +1,7 @@
+<!--
+Re-Metrics (C) 2012-2017,2020,2021 Tatsuhiko Shoji
+The sources for noMeiryoUI are distributed under the MIT open source license
+-->
 body{
 	background-color:#ccffcc;
 	color:black;
