--- a/help/ja-jp/contents/ReMetrics.css
+++ b/help/ja-jp/contents/ReMetrics.css
@@ -1,3 +1,7 @@
+/*
+Re-Metrics (C) 2012-2021 Tatsuhiko Shoji
+The sources for Re-Metrics are distributed under the MIT open source license
+*/
 body{
 	background-color:#ccffcc;
 	color:black;
